apps/media/deluge/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: deluge-service
  namespace: default
spec:
  selector:
    app: deluge
  ports:
    - name: web
      protocol: TCP
      port: 8112
      targetPort: 8112
    - name: daemon
      protocol: TCP
      port: 58846
      targetPort: 58846
  type: NodePort
