apps/media/deluge/ingress.yaml
# filepath: /c:/Repos/homelab/apps/media/deluge/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: deluge-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: home.hont.ro
    http:
      paths:
      - path: /deluge
        pathType: Prefix
        backend:
          service:
            name: deluge-service
            port:
              number: 8112
